feat(api): include defaultProjectId in admin user list (U8)
