# apps/api/openapi.snapshot.json
@@ -2037,6 +2037,13 @@
                       "createdAt": {
                         "type": "string"
                       },
+                      "defaultProjectId": {
+                        "format": "uuid",
+                        "type": [
+                          "string",
+                          "null"
+                        ]
+                      },
                       "email": {
                         "format": "email",
                         "type": "string"
@@ -2073,6 +2080,7 @@
                       "lastName",
                       "role",
                       "isActive",
+                      "defaultProjectId",
                       "createdAt",
                       "updatedAt"
                     ],
@@ -2180,6 +2188,13 @@
                     "createdAt": {
                       "type": "string"
                     },
+                    "defaultProjectId": {
+                      "format": "uuid",
+                      "type": [
+                        "string",
+                        "null"
+                      ]
+                    },
                     "email": {
                       "format": "email",
                       "type": "string"
@@ -2216,6 +2231,7 @@
                     "lastName",
                     "role",
                     "isActive",
+                    "defaultProjectId",
                     "createdAt",
                     "updatedAt"
                   ],
@@ -2425,6 +2441,13 @@
                     "createdAt": {
                       "type": "string"
                     },
+                    "defaultProjectId": {
+                      "format": "uuid",
+                      "type": [
+                        "string",
+                        "null"
+                      ]
+                    },
                     "email": {
                       "format": "email",
                       "type": "string"
@@ -2461,6 +2484,7 @@
                     "lastName",
                     "role",
                     "isActive",
+                    "defaultProjectId",
                     "createdAt",
                     "updatedAt"
                   ],
